[gd_scene load_steps=11 format=3 uid="uid://c0yvffnohn8tx"]

[ext_resource type="Script" uid="uid://bi1pxjo2rj311" path="res://scripts/observation/main.gd" id="1_64v3t"]
[ext_resource type="PackedScene" uid="uid://ck57c88aqqfx2" path="res://scenes/observation/rotating_star_field.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://jdk6c6id5gv" path="res://scenes/observation/player_observer.tscn" id="2_h2yge"]
[ext_resource type="Shader" uid="uid://ba6xcygwib32b" path="res://shaders/transparent_circle.gdshader" id="4_1bvp3"]
[ext_resource type="Resource" uid="uid://dgtwp45fxqhdi" path="res://resources/players/Player1.tres" id="4_u0tbu"]
[ext_resource type="Resource" uid="uid://cp774eauo6qyo" path="res://resources/players/Player2.tres" id="5_g4oh8"]
[ext_resource type="Resource" uid="uid://nxdid1t8m7go" path="res://resources/players/Player3.tres" id="6_xq46r"]
[ext_resource type="Resource" uid="uid://c6jxup0s2ou4r" path="res://resources/players/Player4.tres" id="7_p2vm5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lquwl"]
shader = ExtResource("4_1bvp3")
shader_parameter/resolution = Vector2(1920, 1080)

[sub_resource type="LabelSettings" id="LabelSettings_lquwl"]
font_size = 100

[node name="Main" type="Node2D"]
script = ExtResource("1_64v3t")

[node name="RotatingStarField" parent="." instance=ExtResource("1_ig7tw")]

[node name="Events" type="Node2D" parent="."]

[node name="PlayerObservers" type="Node2D" parent="."]

[node name="PlayerObserver1" parent="PlayerObservers" instance=ExtResource("2_h2yge")]
position = Vector2(960, 1059)
observation_area = Vector2(100, 50)
controlling_player = ExtResource("4_u0tbu")

[node name="PlayerObserver2" parent="PlayerObservers" instance=ExtResource("2_h2yge")]
position = Vector2(440, 537)
rotation = 1.5708
observation_area = Vector2(150, 50)
controlling_player = ExtResource("5_g4oh8")

[node name="PlayerObserver3" parent="PlayerObservers" instance=ExtResource("2_h2yge")]
position = Vector2(961, 21)
rotation = 3.14159
observation_area = Vector2(150, 50)
controlling_player = ExtResource("6_xq46r")

[node name="PlayerObserver4" parent="PlayerObservers" instance=ExtResource("2_h2yge")]
position = Vector2(1480, 537)
rotation = -1.5708
observation_area = Vector2(150, 50)
controlling_player = ExtResource("7_p2vm5")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_lquwl")
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Score" type="Label" parent="."]
visible = false
offset_right = 480.0
offset_bottom = 230.0
text = "Score:"
label_settings = SubResource("LabelSettings_lquwl")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
position = Vector2(2, 0)
build_mode = 1
polygon = PackedVector2Array(960, -6, 1070, 4, 1183, 40, 1286, 98, 1363, 169, 1434, 268, 1477, 373, 1503, 454, 1503, 540, 1488, 675, 1447, 778, 1344, 934, 1282, 984, 1209, 1035, 1151, 1054, 1074, 1074, 969, 1082, 862, 1076, 765, 1057, 682, 1012, 604, 960, 527, 876, 478, 804, 431, 696, 400, 540, 416, 448, 448, 338, 493, 259, 547, 178, 624, 115, 684, 68, 783, 26)

[node name="SessionTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[connection signal="timeout" from="SessionTimer" to="." method="_on_session_timer_timeout"]
